--- a/themes/hugo-geekdoc/i18n/en.yaml
+++ b/themes/hugo-geekdoc/i18n/en.yaml
@@ -34,9 +34,8 @@ posts_count:
   other: "{{ . }} posts"
 posts_tagged_with: All posts tagged with '{{ . }}'
 
-footer_build_with: >
-  Built with <a href="https://gohugo.io/" class="gdoc-footer__link">Hugo</a> and
-  <svg class="gdoc-icon gdoc_heart"><use xlink:href="#gdoc_heart"></use></svg>
+nuxui_version: >
+  nuxui 0.0.1 ·2022-05-11·487d750
 footer_legal_notice: Legal Notice
 footer_privacy_policy: Privacy Policy
 footer_content_license_prefix: >
