--- a/themes/hugo-geekdoc/i18n/zh-cn.yaml
+++ b/themes/hugo-geekdoc/i18n/zh-cn.yaml
@@ -34,10 +34,8 @@ posts_count:
   other: "{{ . }} 个帖子"
 posts_tagged_with: 所有带有“{{ . }}”标签的帖子。
 
-footer_build_with: >
-  基于 <a href="https://gohugo.io/" class="gdoc-footer__link">Hugo</a>
-  <svg class="gdoc-icon gdoc_heart"><use xlink:href="#gdoc_heart"></use></svg> 制作
-
+nuxui_version: >
+  nuxui 0.0.1 ·2022-05-11·487d750
 footer_legal_notice: "法律声明"
 footer_privacy_policy: "隐私政策"
 footer_content_license_prefix: >
